# dot-dash

./: .gitignore  404.html  Cargo.toml  Dioxus.toml  README.md  build.rs  deno.json  dot_dash-efa4ce82674c1866.js  dot_dash-efa4ce82674c1866_bg.wasm  dot_dash.js  dot_dash.wasm  dot_dash_bg.wasm  flake.nix  index.html  manifest.json  sw.js
.cargo/: config.toml
.github/workflows/: ci.yml  pages.yml
assets/: dot_dash-26e6dc6e14bcbc95.js  dot_dash-26e6dc6e14bcbc95.js.br  dot_dash-40fa3795b48f3e8d.js  dot_dash-40fa3795b48f3e8d.js.br  dot_dash-ee7dacc6eecc83a6.js  dot_dash-ee7dacc6eecc83a6.js.br  dot_dash-f17b67aa3ea37556.js  dot_dash-f17b67aa3ea37556.js.br  dot_dash-web-22279873ca161a53.js  dot_dash-web-22279873ca161a53.js.br  dot_dash-web-983eeff9773c0a3a.js  dot_dash-web-983eeff9773c0a3a.js.br  dot_dash-web_bg-613d05a02abacfee.wasm  dot_dash-web_bg-613d05a02abacfee.wasm.br  dot_dash-web_bg-91504f51e5ba709a.wasm  dot_dash-web_bg-91504f51e5ba709a.wasm.br  dot_dash_bg-3833ac9037264b59.wasm  dot_dash_bg-3833ac9037264b59.wasm.br  dot_dash_bg-55a74a17182d5cfa.wasm  dot_dash_bg-55a74a17182d5cfa.wasm.br  dot_dash_bg-abb2ae6561e4a62d.wasm  dot_dash_bg-abb2ae6561e4a62d.wasm.br  dot_dash_bg-d2fc4da394a47702.wasm  dot_dash_bg-d2fc4da394a47702.wasm.br  dot_dash_bg-d43783b8267bc1f7.wasm  dot_dash_bg-d43783b8267bc1f7.wasm.br  options-21a7784b39fd9b69.svg.br  sw.js  tailwind-92511a980fd06cd7.css  tailwind-95c5a5bd179d3f91.css  tailwind-95c5a5bd179d3f91.css.br  tailwind-b5d6c1ddfeba52f9.css  tailwind-e16fe3691b493f2b.css  tailwind-e16fe3691b493f2b.css.br
assets/dioxus/: dot-dash.js  dot-dash.js.br  dot-dash_bg.wasm  dot-dash_bg.wasm.br  my-cool-project.js  my-cool-project.js.br  my-cool-project_bg.wasm  my-cool-project_bg.wasm.br
assets/dioxus/snippets/dioxus-interpreter-js-2a9fdcda6a4621ea/: inline0.js  inline0.js.br
assets/dioxus/snippets/dioxus-interpreter-js-7e2aed97ebee2c55/: inline0.js  inline0.js.br
assets/dioxus/snippets/dioxus-interpreter-js-ec619651cd4d8de4/: inline0.js  inline0.js.br
assets/images/: stop.svg.br
assets/styles/: main.css  main.css.br
assets/styles/tailwind/: tailwind.css
images/: alphabet.svg.br  clipboard.svg.br  header.svg.br  hide.svg.br  options.svg.br  play.svg.br  stop.svg.br
lib/: Cargo.toml
lib/src/: desktop.rs  lib.rs  macos.rs  utils.rs  web.rs
lib/src/learning/: mod.rs  practice.rs  quiz_challenge.rs  speed_trainer.rs  types.rs
lib/src/learning/methods/: farnsworth.rs  koch.rs  mod.rs
lib/src/morse/: characters.rs  mod.rs  types.rs
lib/src/stats/: achievements.rs  history.rs  mod.rs  types.rs
linux/: Cargo.toml
public/styles/tailwind/: tailwind.css
src/: app.rs  gui.rs  lib.rs  main.rs
src/app/: web.rs
src/routes/: home.rs
styles/: main.css.br
styles/tailwind/: tailwind.css  tailwind.css.br
wasm/: dot_dash.d.ts  dot_dash.d.ts.br  dot_dash.js  dot_dash.js.br  dot_dash_bg.wasm  dot_dash_bg.wasm.br  dot_dash_bg.wasm.d.ts  dot_dash_bg.wasm.d.ts.br
wasm/snippets/dioxus-interpreter-js-161bb2cc5b21a4da/: inline0.js  inline0.js.br
wasm/snippets/dioxus-interpreter-js-4f37c5a4b5d73981/: inline0.js  inline0.js.br
wasm/snippets/dioxus-interpreter-js-654dc4519bce26d0/: inline0.js  inline0.js.br
wasm/snippets/dioxus-interpreter-js-d20e126dfa95ef37/: inline0.js  inline0.js.br
web/: .gitignore  Cargo.toml  Makefile.toml  tailwind.config.cjs
web/dioxus/: settings.toml
web/public/styles/: main.css
web/src/: main.rs
web/src/routes/: home.rs
