[package]
name = "dot_dash"
version = "0.1.0"
authors = ["Allister Isaiah Harvey <a.i.harvey@icloud.com>"]
edition = "2021"


[dependencies]
derive_more = { version = "1.0.0", features = ["display"] }
dioxus = { version = "=0.6.0-alpha.2", features = ["router"] }
dioxus-logger = "0.5.1"
morsify = { git = "https://github.com/martial-plains/morsify", branch = "main", version = "0.1.0" }


[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
dioxus = { version = "=0.6.0-alpha.2", features = ["desktop", "router"] }
cpal = "0.15.3"
rodio = "0.19.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
dioxus = { version = "=0.6.0-alpha.2", features = ["web", "router"] }
gloo = { version = "0.11.0", features = ["futures", "timers"] }
wasm-bindgen-futures = "0.4.43"
web-sys = { version = "0.3.69", features = [
    "AudioContext",
    "AudioDestinationNode",
    "AudioParam",
    "Clipboard",
    "GainNode",
    "Navigator",
    "OscillatorNode",
    "OscillatorType",
    "SpeechSynthesis",
    "SpeechSynthesisUtterance",
    "Window",
] }

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.5.2"
objc2-foundation = { version = "0.2.2" }
objc2-app-kit = { version = "0.2.2", features = [
    "NSPasteboard",
    "NSSpeechSynthesizer",
] }

[profile.release]
opt-level = 2 # fast and small wasm

# Optimize all dependencies even in debug builds:
[profile.dev.package."*"]
opt-level = 2


[patch.crates-io]
