[package]
name = "dot_dash"
version = "0.1.0"
authors = ["Allister Isaiah Harvey <a.i.harvey@icloud.com>"]
edition = "2021"


[dependencies]
derive_more = { version = "1.0.0", features = ["display"] }
dioxus = { version = "0.6.2", features = ["router"] }
dioxus-cli-config = "0.6.2"
dioxus-logger = "0.6.2"
morsify = { version = "0.1.0" }
serde = "1.0.211"

[features]
desktop = ["dioxus/desktop"]
web = ["dioxus/web"]


[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
cpal = "0.15.3"
rodio = "0.20.1"

[target.'cfg(target_arch = "wasm32")'.dependencies]
gloo = { version = "0.11.0", features = ["futures", "timers"] }
wasm-bindgen-futures = "0.4.43"
web-sys = { version = "0.3.69", features = [
    "AudioContext",
    "AudioDestinationNode",
    "AudioParam",
    "Clipboard",
    "GainNode",
    "Navigator",
    "OscillatorNode",
    "OscillatorType",
    "SpeechSynthesis",
    "SpeechSynthesisUtterance",
    "Window",
] }

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6.0"
objc2-foundation = { version = "0.2.2" }
objc2-app-kit = { version = "0.3.0", features = [
    "NSPasteboard",
    "NSSpeechSynthesizer",
] }

[build-dependencies]
serde = "1.0.211"
toml = "0.8.19"

[profile.release]
opt-level = 2 # fast and small wasm

# Optimize all dependencies even in debug builds:
[profile.dev.package."*"]
opt-level = 2

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"


[patch.crates-io]
