[workspace]
resolver = "3"
members = ["web", "lib"]

[workspace.dependencies]
cpal = "0.16.0"
derive_more = { version = "2.0.1" }
dioxus = { version = "0.6.2" }
dioxus-cli-config = "0.6.2"
dioxus-logger = "0.6.2"
dot-dash = { path = "lib" }
gloo = "0.11.0"
morsify = "0.1.0"
objc2 = "0.6.1"
objc2-app-kit = "0.3.1"
objc2-foundation = "0.3.1"
rodio = "0.20.1"
serde = "1.0.211"
tokio = "1.46.1"
wasm-bindgen-futures = "0.4.43"
web-sys = "0.3.69"

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
