[package]
name = "dot_dash-web"
version = "0.1.0"
authors = ["Allister Isaiah Harvey <a.i.harvey@icloud.com>"]
edition = "2021"


[dependencies]
dot-dash = { workspace = true }
derive_more = { workspace = true, features = ["display"] }
dioxus = { workspace = true, features = ["router"] }
dioxus-cli-config = { workspace = true }
dioxus-logger = { workspace = true }
morsify = { workspace = true }
serde = { workspace = true }

[build-dependencies]
serde = { workspace = true }
toml = "0.9.2"

[profile.release]
opt-level = 2 # fast and small wasm

# Optimize all dependencies even in debug builds:
[profile.dev.package."*"]
opt-level = 2

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"


[patch.crates-io]
